<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".user_interface.activity.GetStartedActivity"
    android:id="@+id/getStartedActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="60dp">
        <ImageView
            android:id="@+id/imageViewGetStartedPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/img_getstarted"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/textViewGetStartedGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/getstarted_greeting"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewGetStartedGreetingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getstarted_greeting2"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonGetStarted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:backgroundTint="@color/yellow_button"
            android:paddingStart="90dp"
            android:paddingTop="18dp"
            android:paddingEnd="90dp"
            android:paddingBottom="18dp"
            android:text="@string/getstarted_button"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewElips1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        app:srcCompat="@drawable/ic_yellow_ellips_horizontal" />

    <ImageView
        android:id="@+id/imageViewElips2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="88dp"
        android:layout_gravity="top|start"
        app:srcCompat="@drawable/ic_yellow_ellips_vertical" />
</FrameLayout>